--- a/css/style.css
+++ b/css/style.css
@@ -610,15 +610,15 @@ b {
     .header__title {
         max-width: 400px;
         font-weight: bold;
-        font-size: 10px;
+        font-size: 15px;
         line-height: 15px;
         font-weight: 100;
         color: rgba(0, 0, 0, 0.973);
         align-items: justify-content;
     }
     .header__text {
-        font-size: 10px;
-        line-height: 10px;
+        font-size: 14px;
+        line-height: 12px;
         /* display: flex; */
         white-space: wrap;
         align-items: justify;
@@ -646,35 +646,56 @@ b {
         font-weight: 600;
         text-transform: uppercase;
     }
-    /* .photo__page {
-        width: 51%;
-    } */
-    /* .header__text {
-        display: none;
-    } */
-    /* .header__top-inner {
-        border-bottom: 2px solid #ECB84C;
-    } */
-    /* .header__top {
-        padding-top: 20px;
-    } */
-    /* .header__title {
-        font-size: 100px;
+}
+
+@media(max-width: 338px) {
+    .header__top-inner {
+        border-bottom: none;
+        display: flex;
+        max-width: 500px;
+        flex-direction: column;
+        height: 100%;
+        font-family: 'Times New Roman', Times, serif;
     }
-    .title {
-        font-size: 24px;
-        line-height: 28px;
-    } */
-    /* body {
+    .header__title {
+        max-width: 500px;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 15px;
+        font-weight: 100;
+        color: rgba(0, 0, 0, 0.973);
+        align-items: justify-content;
+    }
+    .header__text {
+        font-size: 12px;
+        line-height: 12px;
+        /* display: flex; */
+        white-space: wrap;
+        align-items: justify;
+        margin-bottom: -12px;
+    }
+    .note {
+        padding-top: 0;
+        padding-bottom: 20px;
+        text-align: right;
+        text-indent: 15px;
         font-size: 15px;
-        line-height: 24px;
+        line-height: 14px;
     }
-    .reason__statistics {
-        display: block;
+    .reason__text {
+        text-align: justify;
+        text-indent: 25px;
+        font-size: 20px;
+        line-height: 20px;
+        font-weight: 400;
     }
-    .reason__statistics-item {
-        margin-bottom: 35px;
-    } */
+    .reason__title {
+        margin-bottom: 22px;
+        font-size: 15px;
+        color: #ec1313;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
 }
 
 @media(min-width: 700px) {
