--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,27 @@ b {
     max-width: 100%;
 }
 
+@media(max-width: 1999px) {
+    .header__top-inner {
+        border-bottom: none;
+        display: flex;
+        max-width: 1500px;
+        flex-direction: column;
+        height: 100%;
+        font-family: 'Times New Roman', Times, serif;
+        margin-left: 145px;
+        /* margin: 0 auto; */
+        padding-top: 40px;
+    }
+    .footer__item--company {
+        width: 140px;
+        padding-left: 0;
+    }
+    .reason__text {
+        font-size: 25px;
+    }
+}
+
 @media(max-width: 1150px) {
     .header__top-inner {
         border-bottom: none;
@@ -375,18 +396,29 @@ b {
 }
 
 @media(max-width: 950px) {
+    .header__top-inner {
+        border-bottom: none;
+        display: flex;
+        max-width: 800px;
+        flex-direction: column;
+        height: 100%;
+        font-family: 'Times New Roman', Times, serif;
+        margin-left: 100px;
+        /* margin: 0 auto; */
+        padding-top: 40px;
+    }
     .header__title {
-        max-width: 600px;
+        max-width: 800px;
         font-weight: bold;
-        font-size: 14px;
-        line-height: 15px;
+        font-size: 25px;
+        line-height: 30px;
         font-weight: 400;
         color: rgba(0, 0, 0, 0.973);
         align-items: justify-content;
     }
     .header__text {
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 20px;
+        line-height: 30px;
         /* display: flex; */
         white-space: wrap;
         align-items: justify;
@@ -445,14 +477,14 @@ b {
     .header__title {
         max-width: 700px;
         font-weight: bold;
-        font-size: 16px;
+        font-size: 20px;
         line-height: 15px;
         font-weight: 400;
         color: rgba(0, 0, 0, 0.973);
         align-items: justify-content;
     }
     .header__text {
-        font-size: 15px;
+        font-size: 19px;
         line-height: 15px;
         /* display: flex; */
         white-space: wrap;
@@ -606,6 +638,7 @@ b {
         flex-direction: column;
         height: 100%;
         font-family: 'Times New Roman', Times, serif;
+        margin-left: 12px;
     }
     .header__title {
         max-width: 400px;
@@ -652,13 +685,14 @@ b {
     .header__top-inner {
         border-bottom: none;
         display: flex;
-        max-width: 500px;
+        max-width: 300px;
         flex-direction: column;
         height: 100%;
         font-family: 'Times New Roman', Times, serif;
+        margin-left: 12px;
     }
     .header__title {
-        max-width: 500px;
+        max-width: 300px;
         font-weight: bold;
         font-size: 14px;
         line-height: 15px;
